--- a/marketplace_backend/package.json
+++ b/marketplace_backend/package.json
@@ -14,9 +14,12 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "http": "^0.0.1-security",
-    "mongoose": "^8.4.4"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.4.4",
+    "nodemailer": "^6.9.14"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.6",
     "nodemon": "^3.1.4"
   }
 }
