--- a/marketplace_frontend/pubspec.yaml
+++ b/marketplace_frontend/pubspec.yaml
@@ -34,8 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   go_router: ^14.2.0
-  lottie: ^3.1.2
   shared_preferences: ^2.2.3
+  blobs: ^2.0.0
+  iconsax: ^0.0.8
+  dio: ^5.5.0+1
+  provider: ^6.1.2
+  flutter_secure_storage: ^9.2.2
 
 dev_dependencies:
   flutter_test:
@@ -61,7 +65,6 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-    - assets/lottie/
 
   #   - images/a_dot_ham.jpeg
 
