--- a/marketplace_frontend_flutter/pubspec.yaml
+++ b/marketplace_frontend_flutter/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   dartz: ^0.10.1
   get_it: ^8.0.0
   logger: ^2.4.0
+  pinput: ^5.0.0
+  skeletonizer: ^1.4.2
 
 dev_dependencies:
   flutter_test:
