--- a/marketplace_frontend_flutter/pubspec.yaml
+++ b/marketplace_frontend_flutter/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   logger: ^2.4.0
   pinput: ^5.0.0
   skeletonizer: ^1.4.2
+  flutter_staggered_grid_view: ^0.7.0
 
 dev_dependencies:
   flutter_test:
