--- a/marketplace_frontend_flutter/pubspec.yaml
+++ b/marketplace_frontend_flutter/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   skeletonizer: ^1.4.2
   flutter_staggered_grid_view: ^0.7.0
   equatable: ^2.0.5
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
