--- a/shoplify_frontend_flutter/pubspec.yaml
+++ b/shoplify_frontend_flutter/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.7.0
   equatable: ^2.0.5
   intl: ^0.19.0
+  flutter_animate: ^4.5.2
 
 dev_dependencies:
   flutter_test:
