--- a/shoplify_frontend_flutter/pubspec.yaml
+++ b/shoplify_frontend_flutter/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   equatable: ^2.0.5
   intl: ^0.19.0
   flutter_animate: ^4.5.2
+  bloc: ^8.1.4
 
 dev_dependencies:
   flutter_test:
